Separeted code and added a List of all berry patch - Broke the JS file into separate files - Added a table showing all patches

--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
 <body>
     <div id="container">
         <h1>Pokemon BDSP Berry Tracker</h1>
-        <div id="wrapper">
-            <div id="map"></div>
-        </div>
-        <div id="list-wrapper">
-            
+        <div id="container2">
+            <div id="wrapper">
+                <div id="map"></div>
+            </div>
+            <div id="list-wrapper">List wrapper content</div>
         </div>
     </div>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-        crossorigin=""></script>
-    <script src="script.js"></script>
+        crossorigin="">
+    </script>
+    <script src="js/storage.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/map.js"></script>
+    <script src="js/marker.js"></script>
+    <script src="js/table.js"></script>
 </body>
 </html>
